--- a/less/homepage.less
+++ b/less/homepage.less
@@ -16,17 +16,23 @@
     
     .main {
 
+        padding-left: 85px;
+
         .side-by-side-top {
             display: flex;
             width: 100%;
+            justify-content: space-between;
+            padding-bottom: 100px;
 
             .small-content {
-                width: 50%;
-                padding: 100px 0 0 80px;
+                width: 45%;
+                padding: 100px 0 0 0;
                 
                 h2 {
-                    .sub-header;
-                    padding-bottom: 15px;
+                    font-size: 24px;
+                    font-weight: bold;
+                    padding-bottom: 18px;
+                
                 }
 
                 p {
@@ -35,8 +41,8 @@
             }
 
             .small-img {
-                width: 50%;
-                padding: 50px 0 0 10px;
+                width: 55%;
+                padding: 50px 0 0 20px;
             }
         }
 
@@ -46,12 +52,12 @@
 
             .small-img {
                 width: 50%;
-                padding: 100px 0 0 80px;
+                // padding: 100px 0 0 80px;
             }
 
             .small-content {
                 width: 50%;
-                padding: 140px 0 0 10px;
+                // padding: 140px 0 0 10px;
 
                 h2 {
                     .sub-header;
@@ -90,7 +96,7 @@
                     letter-spacing: 8px;
                     text-align: center;
                     padding-top: 35px;
-                    margin: 175px 0 0 540px;
+                    // margin: 175px 0 0 540px;
                 }
 
                 p {
